--- a/template.css
+++ b/template.css
@@ -116,7 +116,11 @@
     	font-weight: bold;
     	text-shadow: none;
     }
-    .login #login_error {
+    .login #login_error,
+    .login .message {
+        background-color: {{ message-background default:background }};
+        color: {{ message-font-color default:font-color }};
+
         -webkit-box-shadow: none;
         box-shadow: none;
     }
