--- a/templates/template.css
+++ b/templates/template.css
@@ -15,12 +15,12 @@
  * Globals
  */
     html {
-    	background: {{ background }};
+    	background: {{ background type:string }};
     }
 
     body.login {
         font-size: 13px;
-        color: {{ font-color }};
+        color: {{ font-color type:number }};
         background: {{ background }};
     	line-height: 1.4;
     	padding: 0;
@@ -56,11 +56,11 @@
         box-shadow: none;
     }
     .login label {
-        color: {{ label-font-color default:font-color }};
+        color: {{ label-font-color default:font-color type:hex }};
     }
     body.login input[type='text'],
     body.login input[type='password'] {
-    	background: {{ input-background default:background }};
+    	background: {{ input-background default:background type:hex }};
     	border: 1px solid #cccccc;
     	font-family: inherit;
     }
@@ -73,7 +73,7 @@
 	    vertical-align: middle;
     }
     #rememberme[type=checkbox]:checked:before {
-	    color: {{ check-color default:font-color }};
+	    color: {{ check-color default:font-color type:hex }};
     }
     #rememberme[type=checkbox]:focus {
         /* checkbox outline color here */
@@ -87,15 +87,15 @@
  * Login Submit Button
  */
     #wp-submit {
-    	background: {{ button-background default:font-color }};
+    	background: {{ button-background default:font-color type:hex }};
     	border: none;
     	text-shadow: none;
     	box-shadow: 0 0 0 0;
-        color: {{ button-font-color default:background }};
+        color: {{ button-font-color default:background type:hex }};
     }
     #wp-submit:hover {
-        background: {{ button-hover-background default:background }};
-        color: {{ button-hover-font-color default:font-color }};
+        background: {{ button-hover-background default:background type:hex }};
+        color: {{ button-hover-font-color default:font-color type:hex }};
     }
 
 
@@ -107,19 +107,19 @@
     }
     .login #nav a {
     	text-decoration: none;
-    	color: {{ link-color default:font-color }} !important;
+    	color: {{ link-color default:font-color type:hex }} !important;
     	padding: auto 1px auto 1px;
     	text-shadow: none;
     }
     .login #nav a:hover {
-    	color: {{ link-hover-color default:font-color }} !important;
+    	color: {{ link-hover-color default:font-color type:hex }} !important;
     	font-weight: bold;
     	text-shadow: none;
     }
     .login #login_error,
     .login .message {
-        background-color: {{ message-background default:background }};
-        color: {{ message-font-color default:font-color }};
+        background-color: {{ message-background default:background type:hex }};
+        color: {{ message-font-color default:font-color type:hex }};
 
         -webkit-box-shadow: none;
         box-shadow: none;
